# backend

./: .dockerignore  .gitignore  LICENSE  README.md  docker_compose_dev.yml  initial_setup_dev.sh  manage.py  pyproject.toml
.envs/: .example
config/: adapters.py  asgi.py  celery_app.py  exceptions.py  middleware.py  pagination.py  urls.py  wsgi.py
config/settings/: base.py  blacklist.py  local.py  middleware.py  prod.py  settings.py
docker/: Dockerfile  entrypoint.sh
purly/: base.py  permissions.py  utils.py
purly/address/: admin.py  apps.py  filters.py  forms.py  managers.py  models.py  pagination.py  serializers.py  signals.py  tests.py  urls.py  views.py
purly/approval/: admin.py  apps.py  email.py  emails.py  forms.py  managers.py  models.py  pagination.py  serializers.py  services.py  urls.py  utils.py  views.py
purly/project/: admin.py  apps.py  filters.py  forms.py  managers.py  models.py  pagination.py  serializers.py  tests.py  urls.py  views.py
purly/requisition/: admin.py  apps.py  filters.py  forms.py  managers.py  models.py  pagination.py  serializers.py  services.py  urls.py  views.py
purly/requisition/management/commands/: create_fake_data.py  delete_fake_data.py
purly/user/: admin.py  apps.py  filters.py  models.py  pagination.py  serializers.py  urls.py  utils.py  views.py
purly/user/management/commands/: create_initial_superuser.py
static/admin/js/: approver_mode_toggle.js  isnull_toggle.js  line_type_toggle.js
templates/: 404.html  500.html  base.html
templates/account/: confirm_login_code.html  email.html  email_confirm.html  login.html  password_change.html  password_reset.html  password_reset_done.html  signup.html  signup_closed.html  verification_sent.html
templates/account/email/: base_message.txt
templates/account/messages/: email_confirmation_failed.txt  email_confirmation_sent.txt
templates/account/snippets/: already_logged_in.html  warn_no_email.html
templates/admin/approval/: change_form.html
templates/admin/requisition/: change_form.html
templates/allauth/layouts/: base.html
templates/approval/email/: approval.txt  approval_subject.txt  fully_approved.txt  fully_approved_subject.txt  rejected.txt  rejected_subject.txt
templates/components/: form.html  form_field.html
templates/pages/: home.html
templatetags/: custom_tags.py
